--- a/view/camisetas.html
+++ b/view/camisetas.html
@@ -8,11 +8,11 @@
 <body>
     <section class="container">
         <h1>Campus shop</h1>
-        <a href="../html/main.html" class="a">Todos los productos</a>
-        <a href="../html/abrigos.html" class="a2">Abrigos</a>
-        <a href="../html/camisetas.html" class="a3">Camisetas</a>
-        <a href="../html/pantalones.html" class="a4">Pantalones</a>
-        <a href="../html/carrito.html" class="a5">Carritos</a>
+        <a href="../view/main.html" class="a">Todos los productos</a>
+        <a href="../view/abrigos.html" class="a2">Abrigos</a>
+        <a href="../view/camisetas.html" class="a3">Camisetas</a>
+        <a href="../view/pantalones.html" class="a4">Pantalones</a>
+        <a href="../view/carrito.html" class="a5">Carritos</a>
         <p class="p1">3</p>
     </section>
 
