--- a/view/carrito_vacio.html
+++ b/view/carrito_vacio.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./carrito_vaccio.css">
+    <link rel="stylesheet" href="../css/carrito_vaccio.css">
     <title>Document</title>
 </head>
 <body>
